# sunbeam

./: .gitignore  CMakeLists.txt  sunbeam.sln - Ярлык.lnk
source/: Queue.cpp  Queue.h  async_client.cpp  client.cpp  client.h  main (2).cpp  main.cpp  message.h
